--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <td>
                 <h3>Intern Online Marketing</h3>
                 <h4> <a href="https://edomizil.ch">e-domizil AG</a></h4>
-                <p>03/2014 - 02/2016<br>Reponsible for Online Marketing.
+                <p>03/2014 - 02/2016<br>Responsible for Online Marketing.
                 </p>
               </td>
               </tr>
