my profile page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           Currently travelling the world.
         </p>
 
-        <a href="http://baniandstjepan.com" class="btn-peach" target="_blank">Follow me</a>
+        <a href="http://baniandstjepan.com" class="btn-peach" target="_blank">Come along!</a>
       </div>
 
       <div class="card text-center">
