my profile page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="card text-center">
-        <img src="vanessa.jpg" alt="Vanessa Oppowa" class="img-circle" id="profile">
+        <img src="images/vanessa.jpg" alt="Vanessa Oppowa" class="img-circle" id="profile">
         <h1> Vanessa Oppowa</h1>
         <h2>Online Marketing Freelancer</h2>
 
@@ -49,7 +49,7 @@
           <tbody>
             <tr>
               <td>
-                <img src="webrepublic.jpg" alt="webrepublic" class="logo">
+                <img src="images/webrepublic.jpg" alt="webrepublic" class="logo">
               </td>
               <td>
                 <h3>Consultant SEA</h3>
@@ -60,7 +60,7 @@
               </tr>
               <tr>
               <td>
-                <img src="edomizil.jpg" alt="edomizil" class="logo">
+                <img src="images/edomizil.jpg" alt="edomizil" class="logo">
               </td>
               <td>
                 <h3>Intern Online Marketing</h3>
@@ -79,7 +79,7 @@
           <tbody>
             <tr>
               <td>
-                <img src="BreakingBad.jpg" alt="breaking bad" class="poster">
+                <img src="images/BreakingBad.jpg" alt="breaking bad" class="poster">
               </td>
               <td>
                 <h3>Breaking Bad</h3>
@@ -88,7 +88,7 @@
               </tr>
               <tr>
               <td>
-                <img src="Fargo.jpg" alt="fargo" class="poster">
+                <img src="images/Fargo.jpg" alt="fargo" class="poster">
               </td>
               <td>
                 <h3>Fargo</h3>
@@ -97,7 +97,7 @@
               </tr>
               <tr>
               <td>
-                <img src="TrueDetective.jpg" alt="true detective" class="poster">
+                <img src="images/TrueDetective.jpg" alt="true detective" class="poster">
               </td>
               <td>
                 <h3>True Detective</h3>
