made a nice banner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0, 0, 0, 0.1) 0%, rgba( 0, 0, 0, 0.1) 50%), url('images/zürich.jpg');">
+      <div class="banner-content text-center">
+        <h1>Welcome</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+    </div>
+
     <div class="container">
       <div class="card text-center">
         <img src="images/vanessa.jpg" alt="Vanessa Oppowa" class="img-circle" id="profile">
@@ -26,18 +33,23 @@
       <div class="card text-center">
         <ul class="list-inline">
           <li class="text-center">
-            <a href="https://www.facebook.com/vanessa.oppowa">
-              <i class="fa fa-facebook"></i> Facebook
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/vanessa-oppowa-630a2871">
+            <a href="https://www.linkedin.com/in/vanessa-oppowa-630a2871" target="_blank">
               <i class="fa fa-linkedin"></i> Linkedin
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/vizzleo">
-              <i class="fa fa-twitter"></i> Twitter
+            <a href="https://www.xing.com/profile/Vanessa_Oppowa" target="_blank">
+              <i class="fa fa-xing"></i> Xing
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/vanessa.oppowa" target="_blank">
+              <i class="fa fa-facebook"></i> Facebook
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/vizzleo/" target="_blank">
+              <i class="fa fa-instagram"></i> Instagram
             </a>
           </li>
         </ul>
@@ -54,7 +66,7 @@
               <td>
                 <h3>Consultant SEA</h3>
                 <h4> <a href="https://webrepublic.ch">Webrepublic AG</a></h4>
-                <p>03/2014 - 02/2016<br>Responsible for international clients.
+                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus esse, quae, nam sed delectus dolores, itaque sunt consectetur earum temporibus blanditiis maiores consequuntur consequatur ab expedita corporis. Incidunt, nemo, fugiat!
                 </p>
               </td>
               </tr>
@@ -65,7 +77,37 @@
               <td>
                 <h3>Intern Online Marketing</h3>
                 <h4> <a href="https://edomizil.ch">e-domizil AG</a></h4>
-                <p>03/2014 - 02/2016<br>Responsible for Online Marketing.
+                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet sit doloribus labore quos nostrum atque soluta placeat minus fugiat provident recusandae eos quo nesciunt corporis dicta maiores totam, nemo iure.
+                </p>
+              </td>
+              </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="card text-left">
+        <h2>Education</h2>
+        <table>
+          <tbody>
+            <tr>
+              <td>
+                <img src="images/.jpg" alt="lewagon" class="logo">
+              </td>
+              <td>
+                <h3>lorem</h3>
+                <h4> <a href="https://lewagon.com">Le Wagon</a></h4>
+                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus esse, quae, nam sed delectus dolores, itaque sunt consectetur earum temporibus blanditiis maiores consequuntur consequatur ab expedita corporis. Incidunt, nemo, fugiat!
+                </p>
+              </td>
+              </tr>
+              <tr>
+              <td>
+                <img src="images/.jpg" alt="hslu" class="logo">
+              </td>
+              <td>
+                <h3>Bachelor in Business Administration</h3>
+                <h4> <a href="https://hslu.ch">Hochschule Luzern</a></h4>
+                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet sit doloribus labore quos nostrum atque soluta placeat minus fugiat provident recusandae eos quo nesciunt corporis dicta maiores totam, nemo iure.
                 </p>
               </td>
               </tr>
@@ -112,6 +154,7 @@
         <h2>About this page</h2>
         This page has been coded during the <a href="http://lewagon.org/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.
       </div>
+    </div>
     </div>
   </body>
 </html>
