--- a/index.html
+++ b/index.html
@@ -1,161 +1,214 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Vanessa Oppowa</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
     <!-- Fontawesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0, 0, 0, 0.1) 0%, rgba( 0, 0, 0, 0.1) 50%), url('images/zürich.jpg');">
-      <div class="banner-content text-center">
-        <h1>Welcome</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+
+  <section id="about">
+
+   <!--******************************
+   INTRO
+   *******************************-->
+
+    <div class="row section-intro">
+      <div class="col-md-12">
+        <h6>Lebenslauf</h6>
+        <h1>Vanessa Oppowa</h1>
+
+        <div class="intro-info">
+
+          <div class="col-md-6">
+            <img src="images/vanessa.jpg" alt="Vanessa Oppowa" id="profile-picture">
+          </div>
+
+          <div class="col-md-6">
+            <ul class="info-list">
+            <li>
+              <a href="tel:0041788290012"><i class="fa fa-phone" aria-hidden="true"></i></a>
+              <span>+41788290012</span>
+            </li>
+            <li>
+              <a href="mailto:vanessa.oppowa87@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+              <span>vanessa.oppowa87@gmail.com</span>
+            </li>
+            <li>
+              <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+              <span>21. Dezember 1987</span>
+            </li>
+            </ul> <!-- /info-list -->
+          </div>
+
+        </div><!-- /intro-info -->
+      </div><!-- /col-md-12 -->
+    </div> <!-- /section-intro -->
+
+
+
+ <!--******************************
+   BERUFSERFAHRUNG
+   *******************************-->
+
+    <div class="row main-info">
+      <div class="col-md-6" id="job-experiences">
+        <h2>Berufserfahrung</h2>
+
+        <h3> Online Marketing Freelancer</h3>
+        <p class="date">03/2016 - aktuell</p>
+        <p> Betreuung der online Marketingaktivitäten von zwei Kunden: einem Schweizer e-Commerce Shop für Bekleidung und einem internationalen Bitcoin Provider. </p>
+
+        <h3>Consultant SEA @ <a href="https://www.webrepublic.ch" target="_blank">Webrepublic AG, Zürich</a></h3>
+        <p class="date">03/2014 - 02/2016</p>
+        <p> Kontinuierliche Betreuung und Beratung von Kunden, Erstellung und Durchführung von Performancepräsentationen, Erarbeitung und Vermittlung von strategischen Handlungsempfehlungen, Konzeption, Planung und Umsetzung von Online-Marketing-Massnahmen, Erstellung von monatlichen Reports, Verantwortung für den effizienten Einsatz des Budgets sowie Budget-Kontrolle.<p>
+
+        <h3>Intern Online Marketing @ <a href="https://www.edomizil.ch" target="_blank">e-domizil AG, Zürich</a> </h3>
+        <p class="date">09/2013 - 02/2014</p>
+        <p> Zuständig für Social Media Kanäle (Facebook, Google+, Twitter), Newsletter Erstellung und Versand mittels CRM, Content Management, Mitarbeit an Eventorganisation „Swiss Holiday Home Award“, Erstellung von Reports.</p>
+      </div><!--/ job-experience id -->
+
+
+
+  <!--******************************
+   EDUCATION
+   *******************************-->
+
+    <div class="col-md-6" id="education">
+        <h2>Ausbildung</h2>
+
+          <h3>FullStack Developer, Web Development </h3>
+          <h4><a href="https://www.lewagon.com" target="_blank">Le Wagon</a> </h4>
+          <p class="date">07/2016 - 09/2016</p>
+          <p>9- Wochen-Intensiv Coding Bootcamp (HTML, CSS, Bootstrap, JavaScript, jQuery, SQL, git, GitHub, Heroku und Ruby on Rails). Design und Umsetzung eines AirBnB Klons und des Rails-Prototypen <a href="https://droneit.herokuapp.com" target="_blank">droneit</a>.
+          </p>
+
+          <h3>Bachelor of Science in Business Administration</h3>
+          <h4> <a href="https://www.hslu.ch" target="_blank">Hochschule Luzern</a></h4>
+          <p class="date">09/2009 - 07/2013</p>
+          <p>Bachelorarbeit: Mobilitätskonzept - Möglichkeiten zur Förderung des öffentlichen Verkehrs und daraus entstehende Chancen für die Sika Schweiz AG (Note 5.5)
+          </p>
+
+          <h3>Erasmus Semester in Kerava Finnland </h3>
+          <h4> <a href="https://www.laurea.fi/en" target="_blank">Laurea University of Applied Sciences</a></h4>
+          <p class="date">09/2012 - 12/2012</p>
+      </div><!-- education id -->
+
+  </div><!-- /row -->
+
+
+
+  <!--******************************
+   SKILLS
+   *******************************-->
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Skills</h2>
+
+          <ul class="skill-bars text-center">
+            <li>
+              <div class="progress percent90"><span>90%</span></div>
+              <strong>HTML5</strong>
+            </li>
+            <li>
+              <div class="progress percent85"><span>85%</span></div>
+              <strong>CSS3</strong>
+            </li>
+            <li>
+              <div class="progress percent50"><span>50%</span></div>
+              <strong>JQuery</strong>
+            </li>
+            <li>
+              <div class="progress percent50"><span>50%</span></div>
+              <strong>Git, GitHub</strong>
+            </li>
+            <li>
+              <div class="progress percent60"><span>60%</span></div>
+              <strong>Ruby on Rails</strong>
+            </li>
+          </ul> <!-- /skill-bars -->
+      </div>
+
+      <div class="col-md-6">
+        <div class="projects">
+          <h2>Projects</h2>
+          <ul>
+            <li>
+              <a href="https://droneit.herokuapp.com" target="_blank">
+                <img src="images/droneit.jpg" alt="Droneit Webapp" class="projects">
+              </a>
+            </li>
+            <li>
+              <a href="https://travel-nanny.herokuapp.com" target="_blank">
+                <img src="images/travel-nanny.jpg" alt="Travel-Nanny Webapp" class="projects">
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+
+
+  <!--******************************
+   BUTTONS
+   *******************************-->
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <a href="mailto:vanessa.oppowa87@gmail.com" title="Kontaktieren" class="button stroke smoothscroll">Kontaktieren</a>
+        <a href="#" title="Download CV" class="button button-primary">Download CV</a>
       </div>
     </div>
 
-    <div class="container">
-      <div class="card text-center">
-        <img src="images/vanessa.jpg" alt="Vanessa Oppowa" class="img-circle" id="profile">
-        <h1> Vanessa Oppowa</h1>
-        <h2>Online Marketing Freelancer</h2>
+  </section>
 
-        <p>
-          Currently travelling the world.
-        </p>
 
-        <a href="http://baniandstjepan.com" class="btn-peach" target="_blank">Come along!</a>
-      </div>
 
-      <div class="card text-center">
-        <ul class="list-inline">
-          <li class="text-center">
-            <a href="https://www.linkedin.com/in/vanessa-oppowa-630a2871" target="_blank">
-              <i class="fa fa-linkedin"></i> Linkedin
-            </a>
-          </li>
-          <li>
-            <a href="https://www.xing.com/profile/Vanessa_Oppowa" target="_blank">
-              <i class="fa fa-xing"></i> Xing
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/vanessa.oppowa" target="_blank">
-              <i class="fa fa-facebook"></i> Facebook
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/vizzleo/" target="_blank">
-              <i class="fa fa-instagram"></i> Instagram
-            </a>
-          </li>
-        </ul>
-      </div>
+  <!--******************************
+   FOOTER
+   *******************************-->
 
-      <div class="card text-left">
-        <h2>Work Experience</h2>
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <img src="images/webrepublic.jpg" alt="webrepublic" class="logo">
-              </td>
-              <td>
-                <h3>Consultant SEA</h3>
-                <h4> <a href="https://webrepublic.ch">Webrepublic AG</a></h4>
-                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus esse, quae, nam sed delectus dolores, itaque sunt consectetur earum temporibus blanditiis maiores consequuntur consequatur ab expedita corporis. Incidunt, nemo, fugiat!
-                </p>
-              </td>
-              </tr>
-              <tr>
-              <td>
-                <img src="images/edomizil.jpg" alt="edomizil" class="logo">
-              </td>
-              <td>
-                <h3>Intern Online Marketing</h3>
-                <h4> <a href="https://edomizil.ch">e-domizil AG</a></h4>
-                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet sit doloribus labore quos nostrum atque soluta placeat minus fugiat provident recusandae eos quo nesciunt corporis dicta maiores totam, nemo iure.
-                </p>
-              </td>
-              </tr>
-          </tbody>
-        </table>
-      </div>
+  <footer id="main-footer" class="text-center">
+    <ul class="list-inline">
+      <li class="text-center">
+        <a href="https://www.linkedin.com/in/vanessa-oppowa-630a2871" target="_blank">
+        <i class="fa fa-linkedin"></i></a>
+      </li>
+      <li>
+        <a href="https://www.xing.com/profile/Vanessa_Oppowa" target="_blank">
+        <i class="fa fa-xing"></i></a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/vanessa.oppowa" target="_blank">
+        <i class="fa fa-facebook"></i></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/vizzleo/" target="_blank">
+        <i class="fa fa-instagram"></i></a>
+      </li>
+    </ul>
+    <p>&copy; 2017 Vanessa Oppowa.</p>
+  </footer>
 
-      <div class="card text-left">
-        <h2>Education</h2>
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <img src="images/.jpg" alt="lewagon" class="logo">
-              </td>
-              <td>
-                <h3>lorem</h3>
-                <h4> <a href="https://lewagon.com">Le Wagon</a></h4>
-                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus esse, quae, nam sed delectus dolores, itaque sunt consectetur earum temporibus blanditiis maiores consequuntur consequatur ab expedita corporis. Incidunt, nemo, fugiat!
-                </p>
-              </td>
-              </tr>
-              <tr>
-              <td>
-                <img src="images/.jpg" alt="hslu" class="logo">
-              </td>
-              <td>
-                <h3>Bachelor in Business Administration</h3>
-                <h4> <a href="https://hslu.ch">Hochschule Luzern</a></h4>
-                <p>03/2014 - 02/2016<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet sit doloribus labore quos nostrum atque soluta placeat minus fugiat provident recusandae eos quo nesciunt corporis dicta maiores totam, nemo iure.
-                </p>
-              </td>
-              </tr>
-          </tbody>
-        </table>
-      </div>
 
-      <div class="card text-left">
-        <h2>My Favorite TV Shows</h2>
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <img src="images/BreakingBad.jpg" alt="breaking bad" class="poster">
-              </td>
-              <td>
-                <h3>Breaking Bad</h3>
-                <p>A high school chemistry teacher diagnosed with inoperable lung cancer turns to manufacturing and selling methamphetamine in order to secure his family's financial future.</p>
-              </td>
-              </tr>
-              <tr>
-              <td>
-                <img src="images/Fargo.jpg" alt="fargo" class="poster">
-              </td>
-              <td>
-                <h3>Fargo</h3>
-                <p>Various chronicles of deception, intrigue and murder in and around frozen Minnesota. Yet all of these tales mysteriously lead back one way or another to Fargo, North Dakota</p>
-              </td>
-              </tr>
-              <tr>
-              <td>
-                <img src="images/TrueDetective.jpg" alt="true detective" class="poster">
-              </td>
-              <td>
-                <h3>True Detective</h3>
-                <p>An anthology series in which police investigations unearth the personal and professional secrets of those involved, both within and outside the law.</p>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="card text-center">
-        <h2>About this page</h2>
-        This page has been coded during the <a href="http://lewagon.org/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.
-      </div>
-    </div>
-    </div>
+<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js">
+    </script>
+    <script src='https://code.jquery.com/jquery-3.1.0.min.js'>
+    </script>
+    <script src='main.js'></script>-->
   </body>
 </html>
 
