small changes to the layout

--- a/index.html
+++ b/index.html
@@ -85,20 +85,17 @@
     <div class="col-md-6" id="education">
         <h2>Ausbildung</h2>
 
-          <h3>FullStack Developer, Web Development </h3>
-          <h4><a href="https://www.lewagon.com" target="_blank">Le Wagon</a> </h4>
+          <h3>FullStack Developer, Web Development @ <a href="https://www.lewagon.com" target="_blank">Le Wagon</a>  </h3>
           <p class="date">07/2016 - 09/2016</p>
           <p>9- Wochen-Intensiv Coding Bootcamp (HTML, CSS, Bootstrap, JavaScript, jQuery, SQL, git, GitHub, Heroku und Ruby on Rails). Design und Umsetzung eines AirBnB Klons und des Rails-Prototypen <a href="https://droneit.herokuapp.com" target="_blank">droneit</a>.
           </p>
 
-          <h3>Bachelor of Science in Business Administration</h3>
-          <h4> <a href="https://www.hslu.ch" target="_blank">Hochschule Luzern</a></h4>
+          <h3>Bachelor of Science in Business Administration @ <a href="https://www.hslu.ch" target="_blank">Hochschule Luzern</a></h3>
           <p class="date">09/2009 - 07/2013</p>
           <p>Bachelorarbeit: Mobilitätskonzept - Möglichkeiten zur Förderung des öffentlichen Verkehrs und daraus entstehende Chancen für die Sika Schweiz AG (Note 5.5)
           </p>
 
-          <h3>Erasmus Semester in Kerava Finnland </h3>
-          <h4> <a href="https://www.laurea.fi/en" target="_blank">Laurea University of Applied Sciences</a></h4>
+          <h3>Erasmus Semester in Kerava Finnland @ <a href="https://www.laurea.fi/en" target="_blank">Laurea University of Applied Sciences</a></h3>
           <p class="date">09/2012 - 12/2012</p>
       </div><!-- education id -->
 
@@ -115,11 +112,11 @@
 
           <ul class="skill-bars text-center">
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <div class="progress percent75"><span>75%</span></div>
               <strong>HTML5</strong>
             </li>
             <li>
-              <div class="progress percent85"><span>85%</span></div>
+              <div class="progress percent75"><span>75%</span></div>
               <strong>CSS3</strong>
             </li>
             <li>
@@ -131,7 +128,7 @@
               <strong>Git, GitHub</strong>
             </li>
             <li>
-              <div class="progress percent60"><span>60%</span></div>
+              <div class="progress percent45"><span>45%</span></div>
               <strong>Ruby on Rails</strong>
             </li>
           </ul> <!-- /skill-bars -->
