--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-
 
   <section id="about">
 
@@ -149,8 +147,7 @@
               </a>
             </li>
           </ul>
-        </div>
-
+        </div><!-- /projects -->
       </div>
 
     </div>
@@ -198,14 +195,6 @@
   </footer>
 
 
-<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js">
-    </script>
-    <script src='https://code.jquery.com/jquery-3.1.0.min.js'>
-    </script>
-    <script src='main.js'></script>-->
   </body>
 </html>
 
