--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-
 
   <section id="about">
 
@@ -71,7 +69,7 @@
         <p class="date">03/2014 - 02/2016</p>
         <p> Kontinuierliche Betreuung und Beratung von Kunden, Erstellung und Durchführung von Performancepräsentationen, Erarbeitung und Vermittlung von strategischen Handlungsempfehlungen, Konzeption, Planung und Umsetzung von Online-Marketing-Massnahmen, Erstellung von monatlichen Reports, Verantwortung für den effizienten Einsatz des Budgets sowie Budget-Kontrolle.<p>
 
-        <h3>Intern Online Marketing @ <a href="https://www.edomizil.ch" target="_blank">e-domizil AG, Zürich</a> </h3>
+        <h3>Intern Online Marketing @ <a href="https://www.edomizil.ch" target="_blank">e-domizil AG, Zürich</a></h3>
         <p class="date">09/2013 - 02/2014</p>
         <p> Zuständig für Social Media Kanäle (Facebook, Google+, Twitter), Newsletter Erstellung und Versand mittels CRM, Content Management, Mitarbeit an Eventorganisation „Swiss Holiday Home Award“, Erstellung von Reports.</p>
       </div><!--/ job-experience id -->
@@ -85,20 +83,17 @@
     <div class="col-md-6" id="education">
         <h2>Ausbildung</h2>
 
-          <h3>FullStack Developer, Web Development </h3>
-          <h4><a href="https://www.lewagon.com" target="_blank">Le Wagon</a> </h4>
+          <h3>FullStack Developer, Web Development @ <a href="https://www.lewagon.com" target="_blank">Le Wagon</a></h3>
           <p class="date">07/2016 - 09/2016</p>
           <p>9- Wochen-Intensiv Coding Bootcamp (HTML, CSS, Bootstrap, JavaScript, jQuery, SQL, git, GitHub, Heroku und Ruby on Rails). Design und Umsetzung eines AirBnB Klons und des Rails-Prototypen <a href="https://droneit.herokuapp.com" target="_blank">droneit</a>.
           </p>
 
-          <h3>Bachelor of Science in Business Administration</h3>
-          <h4> <a href="https://www.hslu.ch" target="_blank">Hochschule Luzern</a></h4>
+          <h3>Bachelor of Science in Business Administration @ <a href="https://www.hslu.ch" target="_blank">Hochschule Luzern</a></h3>
           <p class="date">09/2009 - 07/2013</p>
           <p>Bachelorarbeit: Mobilitätskonzept - Möglichkeiten zur Förderung des öffentlichen Verkehrs und daraus entstehende Chancen für die Sika Schweiz AG (Note 5.5)
           </p>
 
-          <h3>Erasmus Semester in Kerava Finnland </h3>
-          <h4> <a href="https://www.laurea.fi/en" target="_blank">Laurea University of Applied Sciences</a></h4>
+          <h3>Erasmus Semester in Kerava Finnland @ <a href="https://www.laurea.fi/en" target="_blank">Laurea University of Applied Sciences</a></h3>
           <p class="date">09/2012 - 12/2012</p>
       </div><!-- education id -->
 
@@ -115,11 +110,11 @@
 
           <ul class="skill-bars text-center">
             <li>
-              <div class="progress percent90"><span>90%</span></div>
+              <div class="progress percent80"><span>80%</span></div>
               <strong>HTML5</strong>
             </li>
             <li>
-              <div class="progress percent85"><span>85%</span></div>
+              <div class="progress percent80"><span>80%</span></div>
               <strong>CSS3</strong>
             </li>
             <li>
@@ -131,7 +126,7 @@
               <strong>Git, GitHub</strong>
             </li>
             <li>
-              <div class="progress percent60"><span>60%</span></div>
+              <div class="progress percent40"><span>40%</span></div>
               <strong>Ruby on Rails</strong>
             </li>
           </ul> <!-- /skill-bars -->
@@ -152,8 +147,7 @@
               </a>
             </li>
           </ul>
-        </div>
-
+        </div><!-- /projects -->
       </div>
 
     </div>
@@ -200,15 +194,6 @@
     <p>&copy; 2017 Vanessa Oppowa.</p>
   </footer>
 
-
-<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js">
-    </script>
-    <script src='https://code.jquery.com/jquery-3.1.0.min.js'>
-    </script>
-    <script src='main.js'></script>-->
   </body>
 </html>
 
